--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,18 @@
 name: health
-description: Wrapper for the iOS HealthKit and Android GoogleFit services.
-version: 4.4.0
+description: Wrapper for HealthKit on iOS and Google Fit and Health Connect on Android.
+version: 7.0.0
 homepage: https://github.com/cph-cachet/flutter-plugins/tree/master/packages/health
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.17.0 <4.0.0"
   flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
-  device_info_plus: ^8.0.0
+  intl: ^0.18.0
+  device_info_plus: ^9.0.0
+  permission_handler: ^10.3.0
 
 dev_dependencies:
   flutter_test:
@@ -19,10 +20,6 @@ dev_dependencies:
   integration_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
   plugin:
     platforms:
