--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: health
-description: Wrapper for HealthKit on iOS and Google Fit and Health Connect on Android.
-version: 10.2.0
+description: Wrapper for Apple's HealthKit on iOS and Google's Health Connect on Android.
+version: 13.1.1
 homepage: https://github.com/cph-cachet/flutter-plugins/tree/master/packages/health
 
 environment:
@@ -10,10 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: '>=0.18.0 <0.20.0'
-  device_info_plus: '>=9.0.0 <11.0.0'
+  intl: '>=0.18.0 <0.21.0'
+  device_info_plus: '>=9.0.0 <12.0.0'
   json_annotation: ^4.8.0
-  carp_serializable: ^1.1.0 # polymorphic json serialization
+  carp_serializable: ^2.0.0 # polymorphic json serialization
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +26,8 @@ dev_dependencies:
   #   dart run build_runner build --delete-conflicting-outputs
   build_runner: any
   json_serializable: any
+  mocktail: ^1.0.4
+  mockito: ^5.4.5
 
 flutter:
   plugin:
